syntax = "proto3";
package irita.opb;

import "gogoproto/gogo.proto";

option go_package = "github.com/bianjieai/irita/modules/opb/types";
option (gogoproto.goproto_getters_all) = false;

// Params defines the parameters for the OPB module.
message Params {
    option (gogoproto.equal) = true;
    option (gogoproto.goproto_stringer) = false;

    string base_token_denom = 1 [(gogoproto.moretags) = "yaml:\"base_token_denom\""];
    string point_token_denom = 2 [(gogoproto.moretags) = "yaml:\"point_token_denom\""];
    string base_token_manager = 3 [(gogoproto.moretags) = "yaml:\"base_token_manager\""];
    bool unrestricted_token_transfer = 4 [(gogoproto.moretags) = "yaml:\"unrestricted_token_transfer\""];
}
